loopdowhile.LoopDoWhile.scala.error
Compilation error:
LoopDoWhile:1: error: value === is not a member of Boolean
while (estSurBlanc()===false){avance} 
                    ^